--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,10 +47,17 @@ psycopg2-binary = "^2.9.10"
 # psycopg2-binary: poetrySQL에 동기 방식으로 연결하는 드라이버
 # - 비동기가 아닌 일반 DB 초기화 코드 등에서 사용됨
 
+httpx = "^0.28.1"
+# httpx: API 테스트 및 HTTP 요청 전송에 사용하는 도구 (비동기 지원)
+
 # ---------------------------------------------------------------
 # 개발할 떄만 사용하는 도구들 (배포에는 포함되지 않음)
 # ---------------------------------------------------------------
 [tool.poetry.group.dev.dependencies]
+
+pytest = "^8.3.1"
+# pytest: 파이썬에서 테스트 코드를 실행할 수 있게 해주는 도구
+# - 테스트 함수가 통과/실패 여부를 자동으로 판별해줌
 
 pytest-asyncio = "^0.26.0"
 # pytest-asyncio: async 함수 테스트에 필요한 도구
@@ -63,6 +70,20 @@ aiosqlite = "^0.21.0"
 httpx = "^0.28.1"
 # httpx: HTTP 요청을 테스트할 수 있는 도구 (requests와 비슷함)
 # 비동기 방식도 지워하며 FastAPI 테스트 코드에서 사용됨
+
+# ---------------------------------------------------------------
+# Pytest 설정: 비동기 테스트의 이벤트 루프 범위를 명시적으로 설정
+# ---------------------------------------------------------------
+[tool.pytest.ini_options]
+
+asyncio_mode = "strict"
+# asyncio_mode = "strict"
+# - 비동기 테스트를 할 때, 잘못된 await 사용 또는 누락을 더 잘 감지합니다.
+# - 비동기 테스트에서 발생할 수 있는 실수를 줄여주는 안전한 모드입니다.
+
+asyncio_default_fixture_loop_scope = "function"
+# - 각 테스트 함수마다 새로운 이벤트 루프를 생성합니다.
+# - 테스트 간의 지원 충돌을 방지하고, 향후 pytest-asyncio 변경에도 대비할 수 입습니다.
 
 # ---------------------------------------------------------------
 # 프로젝트를 빌드(포장하거나 배포)할 때 사용하는 설정
